samples/_failures_safe/1761401250_8b57dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_943330af.c: In function ‘main’:
./samples/SAFE/__tmp_943330af.c:173:25: error: missing terminating " character
  173 |         fprintf(stderr, "Invalid number
      |                         ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_943330af.c:173:9: error: expected expression at end of input
  173 |         fprintf(stderr, "Invalid number
      |         ^~~~~~~
./samples/SAFE/__tmp_943330af.c:173:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_943330af.c:173:9: error: expected declaration or statement at end of input
